--- a/PhenoPad/App.xaml
+++ b/PhenoPad/App.xaml
@@ -22,10 +22,12 @@
             <SolidColorBrush x:Key="Button_Background">#A2CEFF</SolidColorBrush>
             <SolidColorBrush x:Key="BUTTON_GRAY">#E3E1DA</SolidColorBrush>
             <SolidColorBrush x:Key="Title_Background">#EDEDED</SolidColorBrush>
-
+            <SolidColorBrush x:Key="Left_Panel_Title_BG">#EDEDED</SolidColorBrush>
+            
             <media:AcrylicBrush x:Key="CustomAcrylicInAppBrush" BackgroundSource="Backdrop" TintOpacity="0.3" TintColor="Black" FallbackColor="Green"/>
             <media:AcrylicBrush x:Key="CustomAcrylicBackgroundBrush" BackgroundSource="HostBackdrop" TintOpacity="0.5" TintColor="White" FallbackColor="LightGray"/>
 
+           
             <Style x:Key="MyButtonStyle" TargetType="Button">
                 <Setter Property="Background" Value="White"/>
                 <Setter Property="Foreground" Value="{StaticResource WORD_DARK}"/>
@@ -105,7 +107,7 @@
             <Color x:Key="Button_Background_Color">#A7CEE3</Color>
             <Color x:Key="TITLE_BAR_BLUE_COLOR">#3DB1FF</Color>
             <Color x:Key="TITLE_BAR_WHITE_COLOR">#E0E0E0</Color>
-
+            <SolidColorBrush x:Key="WORD_DARKER">#005EC4</SolidColorBrush>
             <SolidColorBrush x:Key="WORD_DARK">#007AFF</SolidColorBrush>
             <Color x:Key="WORD_DARK_COLOR">#007AFF</Color>
             <SolidColorBrush x:Key="Dark_Button_Color">#0050c5</SolidColorBrush>
@@ -148,10 +150,10 @@
                                         <VisualState x:Name="PointerOver">
                                             <Storyboard>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ToggleButtonBackgroundPointerOver}"/>
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource Button_Background}"/>
                                                 </ObjectAnimationUsingKeyFrames>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="BorderBrush">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ToggleButtonBorderBrushPointerOver}"/>
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource Dark_Button_Color}"/>
                                                 </ObjectAnimationUsingKeyFrames>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
                                                     <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ToggleButtonForegroundPointerOver}"/>
@@ -176,7 +178,7 @@
                                         <VisualState x:Name="Disabled">
                                             <Storyboard>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ToggleButtonBackgroundDisabled}"/>
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource Left_Panel_Title_BG}"/>
                                                 </ObjectAnimationUsingKeyFrames>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
                                                     <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ToggleButtonForegroundDisabled}"/>
@@ -203,7 +205,7 @@
                                         <VisualState x:Name="CheckedPointerOver">
                                             <Storyboard>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PANEL_GRAY}"/>
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource Button_Background}"/>
                                                 </ObjectAnimationUsingKeyFrames>
                                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="BorderBrush">
                                                     <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ToggleButtonBorderBrushCheckedPointerOver}"/>
