--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -12,7 +12,8 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    Loaded="UserControl_Loaded">
+    Loaded="UserControl_Loaded"
+    >
     <UserControl.Resources>
         <ResourceDictionary>
             <x:Double x:Key="categoryButtonHeight">60</x:Double>
