--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -20,16 +20,16 @@
             <x:Double x:Key="categoryButtonFontSize">27</x:Double>
         </ResourceDictionary>
     </UserControl.Resources>
-    
+
     <Grid Background="WhiteSmoke" BorderBrush="LightGray" Name="OutlineGrid"
-          >
-        
+          ManipulationMode="TranslateX,TranslateY"
+          ManipulationStarted="Manipulator_OnManipulationStarted"
+          ManipulationDelta="Manipulator_OnManipulationDelta">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="48"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-
-
 
         <Grid Name="contentGrid" Grid.Row="1">
 
@@ -41,8 +41,8 @@
             <!--
             <InkCanvas x:Name="inkCanvas" />
             -->
-            
-            
+
+
         </Grid>
         <Grid Name="categoryGrid"  Grid.Row="1">
 
@@ -59,15 +59,23 @@
             </StackPanel>
         </Grid>
         <RelativePanel Name="TitleRelativePanel" Background="WhiteSmoke">
-            <Rectangle Grid.Row ="0" x:Name="ResizeRectangle" IsHitTestVisible="False"
-               Width="10" Height="10" Fill="White"
-               VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            
+
             <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
                 <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
             
+
+            
+
         </RelativePanel>
+        <Rectangle Grid.Row ="0" x:Name="ResizeRectangleTopLeft" IsHitTestVisible="False"
+               Width="10" Height="10" Fill="Red"
+               VerticalAlignment="Top" HorizontalAlignment="Left"/>
         
+        <Rectangle Grid.Row ="0" x:Name="ResizeRectangleTopRight" IsHitTestVisible="False"
+               Width="10" Height="10" Fill="Red"
+               VerticalAlignment="Top" HorizontalAlignment="Right"/>
         <!--
         <StackPanel Name="ControlStackPanel" Visibility="Collapsed" Orientation="Horizontal" FlowDirection="RightToLeft">
             <Button VerticalAlignment="Top" Style="{StaticResource MyButtonStyle}" Foreground="Black" Background="{StaticResource Title_Background}" Margin="0 -32 0 0" Click="EditButton_Click">
@@ -84,9 +92,9 @@
             </Button>
         </StackPanel>
         -->
-       
-        <InkToolbar x:Name="inkToolbar"  Visibility="Collapsed"  Grid.Row="0" Margin="0 0 0 0"
-        VerticalAlignment="Top" 
+
+        <InkToolbar x:Name="inkToolbar" Background="LightGray" Visibility="Visible"  Grid.Row="0" Margin="10 0 10 0"
+        VerticalAlignment="Center" 
         HorizontalAlignment="Right" 
         Orientation="Horizontal"   />
 
@@ -117,23 +125,29 @@
                         <Rectangle x:Name="StopRecordingIcon" Fill="White" Width="20" Height="20" Visibility="Collapsed"/>
                     </Grid>
                 </Button>-->
-                
+
             </StackPanel>
-            
+
         </Grid>
 
-        <local:AddInImageControl Grid.Row="1" Visibility="Collapsed" x:Name="imageControl"/>
-        
+        <local:AddInImageControl Grid.Row="1" Visibility="Collapsed" Margin="10 10 10 10" x:Name="imageControl"/>
 
-        <InkCanvas Grid.Row="1" Visibility="Collapsed" x:Name="inkCanvas"/>
+
+        <InkCanvas Grid.Row="1"  Margin="10 10 10 10" x:Name="inkCanvas" />
+        <Rectangle Grid.Row ="1" x:Name="ResizeRectangleBottomRight" IsHitTestVisible="False"
+               Width="10" Height="10" Fill="Red"
+               VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+        <Rectangle Grid.Row ="1" x:Name="ResizeRectangleBottomLeft" IsHitTestVisible="False"
+               Width="10" Height="10" Fill="Red"
+               VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
 
 
         <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.5" Name="MovingGrid" Visibility="Collapsed">
-            
-        
+
+
         </Grid>
 
-        
 
-    </Grid> 
+
+    </Grid>
 </UserControl>
